--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <h2>Contact</h2>
     <p>📧 Email: <a href="mailto:abinavc457@gmail.com">abinavc457@gmail.com</a></p>
     <p>🔗 LinkedIn: <a href="https://linkedin.com/in/abinav-c-127923264" target="_blank">linkedin.com/in/abinav-c-127923264</a></p>
-    <p>💻 GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+    <p>💻 GitHub: <a href="https://github.com/ABINAVABI457" target="_blank">github.com/yourusername</a></p>
   </section>
 
   <footer>
