--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 <body>
   <header>
     <h1>Abinav C</h1>
-    <p>B.Sc. AI & ML Graduate | Python | CNN | NLP | Deep Learning Enthusiast
- | Python | CNN | NLP | Deep Learning Enthusiast</p>
+    <p>B.Sc AI & ML Graduate | Python | CNN | NLP | Deep Learning Enthusiast | Python | CNN | NLP | Deep Learning Enthusiast</p>
     <p>📍 Palakkad, Kerala | 📞 +91 7356434032 | ✉️ <a href="mailto:abinavc457@gmail.com" style="color:#fff;">abinavc457@gmail.com</a></p>
     <p><a href="https://linkedin.com/in/abinav-c-127923264" target="_blank" style="color:#fff;">LinkedIn</a> | <a href="https://github.com/yourusername" target="_blank" style="color:#fff;">GitHub</a></p>
   </header>
