--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 <body>
   <header>
     <h1>Abinav C</h1>
-    <p>B.Sc AI & ML Graduate | Python | CNN | NLP | Deep Learning Enthusiast | Python | CNN | NLP | Deep Learning Enthusiast</p>
+    <p>B.Sc. AI & ML Graduate | Python | Deep Learning | NLP | Data Science Enthusiast</p>
     <p>📍 Palakkad, Kerala | 📞 +91 7356434032 | ✉️ <a href="mailto:abinavc457@gmail.com" style="color:#fff;">abinavc457@gmail.com</a></p>
-    <p><a href="https://linkedin.com/in/abinav-c-127923264" target="_blank" style="color:#fff;">LinkedIn</a> | <a href="https://github.com/yourusername" target="_blank" style="color:#fff;">GitHub</a></p>
+    <p><a href="https://linkedin.com/in/abinav-c-127923264" target="_blank" style="color:#fff;">LinkedIn</a> | <a href="https://github.com/ABINAVABI457" target="_blank" style="color:#fff;">GitHub</a></p>
   </header>
 
   <nav>
@@ -71,7 +71,7 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I am currently pursuing a B.Sc. in Artificial Intelligence and Machine Learning at AJK College of Arts and Science (2022–2025). I am passionate about building intelligent systems, computer vision, and chatbots that solve real-world problems. My journey includes internships, projects, and a paper presentation, which shaped my skills in AI/ML, Python, and deep learning.</p>
+    <p>As a B.Sc. AI & ML graduate, I specialize in deep learning, computer vision, and natural language processing. I have built practical solutions such as a CNN-based cancer detection model with chatbot integration and dog breed classification using transfer learning. With internship experience in Python, Flutter, and AI, I am eager to contribute to impactful projects in data science and artificial intelligence.</p>
   </section>
 
   <section id="skills">
@@ -126,7 +126,7 @@
     <h2>Contact</h2>
     <p>📧 Email: <a href="mailto:abinavc457@gmail.com">abinavc457@gmail.com</a></p>
     <p>🔗 LinkedIn: <a href="https://linkedin.com/in/abinav-c-127923264" target="_blank">linkedin.com/in/abinav-c-127923264</a></p>
-    <p>💻 GitHub: <a href="https://github.com/ABINAVABI457" target="_blank">github.com/yourusername</a></p>
+    <p>💻 GitHub: <a href="https://github.com/ABINAVABI457" target="_blank">github.com/ABINAVABI457</a></p>
   </section>
 
   <footer>
